fix layout issues with gallery event selection

--- a/src/style/GalleryEventSelection.module.scss
+++ b/src/style/GalleryEventSelection.module.scss
@@ -1,10 +1,23 @@
 .eventSelectionGallery {
     display: grid;
     grid-column-gap: 0;
-    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+    grid-template-columns: repeat(4, minmax(100px, 200px));
     grid-auto-rows: 1fr;
-    grid-auto-flow: dense column;
+    grid-auto-flow: dense;
     justify-content: center;
+    max-width: 100%;
+
+    @media(max-width: 800px) {
+        & {
+            grid-template-columns: repeat(3, minmax(100px, 200px));
+        }
+    }
+
+    @media(max-width: 450px) {
+        & {
+            grid-template-columns: repeat(2, minmax(100px, 200px));
+        }
+    }
 
 
     &::before {
